[+] optimize image loading a lot, make the game capable of having big playable maps and cleanup networking